# ChangeLog for sys-libs/openhpi
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/openhpi/ChangeLog,v 1.5 2009/06/28 19:27:05 patrick Exp $

*openhpi-2.12.0 (28 Jun 2009)

  28 Jun 2009; Patrick Lauer <patrick@gentoo.org> +openhpi-2.12.0.ebuild:
  Bump to 2.12.0. Fixes #251740 #261099

*openhpi-2.10.1 (01 Nov 2008)

  01 Nov 2008; Robin H. Johnson <robbat2@gentoo.org> +files/openhpi-confd,
  +files/openhpi-initd, +openhpi-2.10.1.ebuild:
  Version bump, per bug #199024. Thanks to Tais M. Hansen
  <tais.hansen@osd.dk> for scripts.

  09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  05 May 2005; Sven Wegener <swegener@gentoo.org> openhpi-2.0.3.ebuild:
  Removed trailing * from <, <=, >= and > dependencies.

*openhpi-2.0.3 (25 Mar 2005)

  25 Mar 2005; Robin H. Johnson <robbat2@gentoo.org> +metadata.xml,
  +openhpi-2.0.3.ebuild:
  Initial commit. Ebuild by Robin H. Johnson <robbat2@gentoo.org>.
