@@ -1,6 +1,9 @@
 # ChangeLog for sys-libs/openhpi
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/openhpi/ChangeLog,v 1.5 2009/06/28 19:27:05 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/openhpi/ChangeLog,v 1.6 2009/08/10 12:10:11 ssuominen Exp $
+
+  10 Aug 2009; Samuli Suominen <ssuominen@gentoo.org> openhpi-2.12.0.ebuild:
+  Fix building with GCC 4.4+ by removing -Werror wrt #277765.
 
 *openhpi-2.12.0 (28 Jun 2009)
 
